<resources>
    <string name="app_name">CalC</string>
    <string name="calculator">Calculator</string>
    <string name="enter_the_number">Enter the number</string>
    <string name="copyright">Copyright</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="ce">CE</string>
    <string name="x">X</string>
    <string name="equal">=</string>
    <string name="_7">7</string>
    <string name="sub">-</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="add">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="div">/</string>
</resources>